# MDPIV

./: .gitignore  CMakeLists.txt  MDP.APS  MDP.rc  MDP.sln  MDP.vcxproj  MDP.vcxproj.filters  MDPIV.rc  README.md  assimp-6.0.2.txt  resources.rc  sdl_renderer.txt
resources/glsl/: fragment.txt  vertex.txt
resources/model/: scp-173.blend  scp-173.mtl
resources/shader/: cube_fs.txt  cube_light_fs.txt  cube_vs.txt  fragment.txt  texture_fs.txt  texture_vs.txt  vertex.txt
src/: Camera.cpp  Camera.h  Graphics.cpp  Graphics.h  Input.c  Input.h  Light.h  LoadImage.c  LoadImage.h  MD_Math.c  MD_Math.cpp  MD_Math.h  Main.cpp  Main.h  Material.h  Materials.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.h  Scene.cpp  Scene.h  Scene2.cpp  Scene2.h  Shader.c  Shader.cpp  Shader.h  SimpleInput.c  SimpleInput.h  Texture.c  Texture.h  Window.cpp  Window.h
src/D3D9/: Renderer_D3D9.cpp  Renderer_D3D9.h
src/Direct3D9/: Renderer_D3D9.cpp  Renderer_D3D9.h  ToD3DMatirx.h
src/OGL/: Renderer_GL.cpp  Renderer_GL.h
src/OpenGL3.3/: Renderer_GL.cpp  Renderer_GL.h  Shader.cpp  Shader.h
src/OpenGL3.3/include/glad/: glad.h
src/SDL3/lib/x64/: SDL3_test.lib  SDL_uclibc.lib
src/SDL3/lib/x86/: SDL3.lib  SDL3_test.lib  SDL_uclibc.lib
src/glad/src/: glad.c
